@@ -82,14 +82,6 @@ setMethod("%*%", signature(x = "dtpMatrix", y = "ddenseMatrix"),
 	  function(x, y) .Call(dtpMatrix_matrix_mm, x, y))
 setMethod("%*%", signature(x = "dgeMatrix", y = "dtpMatrix"),
 	  function(x, y) .Call(dgeMatrix_dtpMatrix_mm, x, y))
-## DB: I don't think this is needed any more
-## %*% should always work for  <fooMatrix> %*% <fooMatrix>
-## setMethod("%*%", signature(x = "dtpMatrix", y = "dtpMatrix"),
-##           function(x, y)
-##           ## FIXME: this is cheap; could we optimize chosing the better of
-##           ## callGeneric(x, as(y, "dgeMatrix"))  and
-##           ## callGeneric(as(x "dgeMatrix"), y))  depending on their 'uplo' ?
-##           callGeneric(x, as(y, "dgeMatrix")))
 
 ## dtpMatrix <-> matrix : will be used by the "numeric" one
 setMethod("%*%", signature(x = "dtpMatrix", y = "matrix"),
