@@ -109,7 +109,8 @@ SEXP dgeMatrix_crossprod(SEXP x, SEXP trans)
 SEXP dgeMatrix_dgeMatrix_crossprod(SEXP x, SEXP y, SEXP trans)
 {
     int tr = asLogical(trans);/* trans=TRUE: tcrossprod(x,y) */
-    SEXP val = PROTECT(NEW_OBJECT(MAKE_CLASS("dgeMatrix")));
+    SEXP val = PROTECT(NEW_OBJECT(MAKE_CLASS("dgeMatrix"))),
+	dn = PROTECT(allocVector(VECSXP, 2));
     int *xDims = INTEGER(GET_SLOT(x, Matrix_DimSym)),
 	*yDims = INTEGER(GET_SLOT(y, Matrix_DimSym)),
 	*vDims;
@@ -130,28 +131,50 @@ SEXP dgeMatrix_dgeMatrix_crossprod(SEXP x, SEXP y, SEXP trans)
 			REAL(GET_SLOT(x, Matrix_xSym)), xDims,
 			REAL(GET_SLOT(y, Matrix_xSym)), yDims,
 			&zero, REAL(GET_SLOT(val, Matrix_xSym)), &m);
+	/* establish dimnames */
+	SET_VECTOR_ELT(dn, 0,
+		       duplicate(VECTOR_ELT(GET_SLOT(x, Matrix_DimNamesSym),
+					    tr ? 0 : 1)));
+	SET_VECTOR_ELT(dn, 1,
+		       duplicate(VECTOR_ELT(GET_SLOT(y, Matrix_DimNamesSym),
+					    tr ? 0 : 1)));
+	SET_SLOT(val, Matrix_DimNamesSym, dn);
     }
-    UNPROTECT(1);
+    UNPROTECT(2);
     return val;
 }
 
 SEXP dgeMatrix_matrix_crossprod(SEXP x, SEXP y, SEXP trans)
 {
     int tr = asLogical(trans);/* trans=TRUE: tcrossprod(x,y) */
-    SEXP val = PROTECT(NEW_OBJECT(MAKE_CLASS("dgeMatrix")));
+    SEXP val = PROTECT(NEW_OBJECT(MAKE_CLASS("dgeMatrix"))),
+	dn = PROTECT(allocVector(VECSXP, 2)),
+	yDnms = R_NilValue, yD;
     int *xDims = INTEGER(GET_SLOT(x, Matrix_DimSym)),
-	*yDims = INTEGER(getAttrib(y, R_DimSymbol)),
-	*vDims, nprot = 1;
-    int m  = xDims[!tr],  n = yDims[!tr];/* -> result dim */
-    int xd = xDims[ tr], yd = yDims[ tr];/* the conformable dims */
+	*yDims, *vDims, nprot = 2;
+    int m  = xDims[!tr],
+	xd = xDims[ tr];
     double one = 1.0, zero = 0.0;
+    Rboolean y_has_dimNames;
 
     if (isInteger(y)) {
 	y = PROTECT(coerceVector(y, REALSXP));
 	nprot++;
     }
-    if (!(isMatrix(y) && isReal(y)))
-	error(_("Argument y must be a numeric matrix"));
+    if (!isReal(y))
+	error(_("Argument y must be numeric or integer"));
+    if(isMatrix(y)) {
+	yDims = INTEGER(getAttrib(y, R_DimSymbol));
+	yDnms = getAttrib(y, R_DimNamesSymbol);
+	y_has_dimNames = yDnms != R_NilValue;
+    } else { // ! matrix
+	yDims = INTEGER(yD = PROTECT(allocVector(INTSXP, 2))); nprot++;
+	yDims[0] = LENGTH(y);
+	yDims[1] = 1;
+	y_has_dimNames = FALSE;
+    }
+    int  n = yDims[!tr],/* (m,n) -> result dim */
+	yd = yDims[ tr];/* (xd,yd): the conformable dims */
     SET_SLOT(val, Matrix_factorSym, allocVector(VECSXP, 0));
     SET_SLOT(val, Matrix_DimSym, allocVector(INTSXP, 2));
     vDims = INTEGER(GET_SLOT(val, Matrix_DimSym));
@@ -165,6 +188,14 @@ SEXP dgeMatrix_matrix_crossprod(SEXP x, SEXP y, SEXP trans)
 			REAL(GET_SLOT(x, Matrix_xSym)), xDims,
 			REAL(y), yDims,
 			&zero, REAL(GET_SLOT(val, Matrix_xSym)), &m);
+	/* establish dimnames */
+	SET_VECTOR_ELT(dn, 0,
+		       duplicate(VECTOR_ELT(GET_SLOT(x, Matrix_DimNamesSym),
+					    tr ? 0 : 1)));
+	if(y_has_dimNames)
+	    SET_VECTOR_ELT(dn, 1,
+			   duplicate(VECTOR_ELT(yDnms, tr ? 0 : 1)));
+	SET_SLOT(val, Matrix_DimNamesSym, dn);
     }
     UNPROTECT(nprot);
     return val;
@@ -343,16 +374,18 @@ SEXP dgeMatrix_matrix_solve(SEXP a, SEXP b)
     return val;
 }
 
+//  right = TRUE:  %*%  is called as  *(y, x, right=TRUE)
 SEXP dgeMatrix_matrix_mm(SEXP a, SEXP bP, SEXP right)
 {
     SEXP b = PROTECT(mMatrix_as_dgeMatrix(bP)),
-	val = PROTECT(NEW_OBJECT(MAKE_CLASS("dgeMatrix")));
+	val= PROTECT(NEW_OBJECT(MAKE_CLASS("dgeMatrix"))),
+	dn = PROTECT(allocVector(VECSXP, 2));
     int *adims = INTEGER(GET_SLOT(a, Matrix_DimSym)),
 	*bdims = INTEGER(GET_SLOT(b, Matrix_DimSym)),
 	*cdims = INTEGER(ALLOC_SLOT(val, Matrix_DimSym, INTSXP, 2));
     double one = 1., zero = 0.;
 
-    if (asLogical(right)) {
+    if (asLogical(right)) { // b %*% a
 	int m = bdims[0], n = adims[1], k = bdims[1];
 	if (adims[0] != k)
 	    error(_("Matrices are not conformable for multiplication"));
@@ -360,13 +393,20 @@ SEXP dgeMatrix_matrix_mm(SEXP a, SEXP bP, SEXP right)
 	if (m < 1 || n < 1 || k < 1) {
 /* 	    error(_("Matrices with zero extents cannot be multiplied")); */
 	    ALLOC_SLOT(val, Matrix_xSym, REALSXP, m * n);
-	} else
+	} else {
 	    F77_CALL(dgemm) ("N", "N", &m, &n, &k, &one,
 			     REAL(GET_SLOT(b, Matrix_xSym)), &m,
 			     REAL(GET_SLOT(a, Matrix_xSym)), &k, &zero,
 			     REAL(ALLOC_SLOT(val, Matrix_xSym, REALSXP, m * n)),
 			     &m);
-    } else {
+	    SET_VECTOR_ELT(dn, 0,
+			   duplicate(VECTOR_ELT(GET_SLOT(b, Matrix_DimNamesSym),
+						0)));
+	    SET_VECTOR_ELT(dn, 1,
+			   duplicate(VECTOR_ELT(GET_SLOT(a, Matrix_DimNamesSym),
+						1)));
+	}
+    } else {  // a %*% b
 	int m = adims[0], n = bdims[1], k = adims[1];
 
 	if (bdims[0] != k)
@@ -375,15 +415,23 @@ SEXP dgeMatrix_matrix_mm(SEXP a, SEXP bP, SEXP right)
 	if (m < 1 || n < 1 || k < 1) {
 /* 	    error(_("Matrices with zero extents cannot be multiplied")); */
 	    ALLOC_SLOT(val, Matrix_xSym, REALSXP, m * n);
-	} else
+	} else {
 	    F77_CALL(dgemm) ("N", "N", &m, &n, &k, &one,
 			     REAL(GET_SLOT(a, Matrix_xSym)), &m,
 			     REAL(GET_SLOT(b, Matrix_xSym)), &k, &zero,
 			     REAL(ALLOC_SLOT(val, Matrix_xSym, REALSXP, m * n)),
 			     &m);
+	    SET_VECTOR_ELT(dn, 0,
+			   duplicate(VECTOR_ELT(GET_SLOT(a, Matrix_DimNamesSym),
+						0)));
+	    SET_VECTOR_ELT(dn, 1,
+			   duplicate(VECTOR_ELT(GET_SLOT(b, Matrix_DimNamesSym),
+						1)));
+	}
     }
-    ALLOC_SLOT(val, Matrix_DimNamesSym, VECSXP, 2);
-    UNPROTECT(2);
+    /* establish dimnames */
+    SET_SLOT(val, Matrix_DimNamesSym, dn);
+    UNPROTECT(3);
     return val;
 }
 
